--- a/stage/package.json
+++ b/stage/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "quartermaster-ts-imp",
+  "name": "quartermaster-ts-stage-imp",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "v4": "ts-node src/v4.ts",
+    "v6": "node --inspect -r ts-node/register src/driver_v6.ts",
     "novel": "ts-node src/novel.ts",
     "compare": "ts-node src/compare.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "queue-cache-distribution": "file:../queue-cache-distribution"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.0.11",
     "colors": "^1.4.0",
