--- a/stage/package.json
+++ b/stage/package.json
@@ -9,14 +9,17 @@
     "v6": "node --inspect -r ts-node/register src/driver_v6.ts",
     "novel": "ts-node src/novel.ts",
     "compare": "ts-node src/compare.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^26.0.3",
     "@types/node": "^14.0.11",
     "colors": "^1.4.0",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
